# scratchpad

./: README.md  go.work
absal/: README.md  absal.py
absal/tests/: test_run.py
astutil/: CMakeLists.txt  astutil.h  example.cc
bidir/: README.md  bidir.rkt
compiler/: data.py  part1.py  part2.py  part3.py  part4.py  part5.py  part6.py  part7.py  part8.py  test_part1.py  test_part2.py  test_part3.py  test_part4.py  test_part5.py  test_part6.py  test_part7.py
compiler/data/: part4.txt  part5.txt
dsltoys/: README.md  pretty.py  pretty_core.py  test_pretty.py
expressions/: README.md  go.mod  lexer.go  lexer.py  parser.py  pratt.go  pratt.py  pratt_test.go
expressions/test/: test_parser.py  test_pratt.py
rewriting/: README.md  matching.py  terms.py
rewriting/test/: test_matching.py  test_terms.py
